--- a/public/assets/css/discover.css
+++ b/public/assets/css/discover.css
@@ -1,249 +1,154 @@
-.site {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-  .site-content {
-    padding: 0 5rem;
-    margin-bottom: 3rem;
-  }
-  
-  /*****************************
-  NAVIGATION
-  *****************************/
-  .app-logo {
-    height: 2.25rem;
-    margin: 0.25rem 1rem;
-    width: 2.25rem;
-  }
-  .ui.header.item {
-    font-family: "Fira Sans", sans-serif;
-  }
-  .ui.secondary.pointing.menu {
-    margin-bottom: 0;
-  }
-  .ui.secondary.pointing.menu .item {
-    color: #a0sdfj;
-  }
-  .ui.secondary.pointing.menu .item.app-name {
-    padding-left: 0;
-  }
-  .ui.secondary.pointing.menu a.item:hover {
-    color: #61afbd;
-    font-weight: 700;
-  }
-  .ui.secondary.pointing.menu .active.item {
-    background-color: transparent;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-bottom: 5px solid #61afbd;
-    font-weight: 700;
-    color: #61afbd;
-  }
-  .ui.secondary.pointing.menu a.active.item:hover {
-    color: #61afbd;
-    font-weight: 700;
-    border-color: #61afbd;
-  }
-  #logout-btn:hover {
-    background-color: #61afbd;
-    color: #ffffff;
-    font-weight: 700;
-  }
-  
-  /*****************************
-  MAIN SECTION
-  *****************************/
-  .ui.card {
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 1px 1px 2px #454e45;
-    height: 150px;
-    width: 100%;
-  }
-  .ui.card.listen {
-    background-image: url("../pattern/pattern1-yellow.jpg");
-  }
-  .ui.card.watch {
-    background-image: url("../pattern/pattern1-green.jpg");
-  }
-  .ui.card.read {
-    background-image: url("../pattern/pattern1-blue.jpg");
-  }
-  .discover-section {
-    font-size: 1.5rem;
-    margin: 2rem 0;
-    padding: 1rem 1rem;
-    text-transform: uppercase;
-  }
-  .card-heading {
-    text-transform: uppercase;
-  }
-  .card-body {
-    margin-top: 15px;
-  }
-  #buttons {
-    /* Positioning */
-    margin: 50px 0;
-    /* Typography */
-    text-align: center;
-  }
-  button {
-    /* Box-model */
-    width: 200px;
-    height: 100px;
-  }
-  .swiper-button-prev,
-  .swiper-button-next {
-    color: #61AFBD;
-    font-weight: 800;
-  }
-  
-  /*****************************
-  FOOTER
-  *****************************/
-  .footer {
-    background-color: #ffffff;
-    height: 6.5rem;
-    width: 100%;
-  }
-  a.item {
-    color: #61AFBD;
-  }
-  .divider-line {
-    color: #61AFBD;
-    font-weight: 800;
-    margin: 0 1.5rem;
-  }
-  .copyright {
-    color: #61AFBD;
-    font-size: 0.8rem;
-    margin: 1rem auto 1.5rem;
-  }
-  
-  /*****************************
-  ADD ENTRY
-  *****************************/
-  #add-entry-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #161e18; /* Fallback color */
-    background-color: #161e1840; /* Black w/ opacity */
-  }
-  #mood-states {
-    margin: auto;
-  }
-  .column {
-    text-align: center;
-  }
-  .mood {
-    border: none;
-    border-radius: 50%;
-    box-shadow: 1px 1px 2px #a9abaa;
-    height: 50px;
-    width: 50px;
-  }
-  .button-clicked {
-    height: 65px;
-    width: 65px;
-  }
-  .mood-text {
-    font-size: 1.25rem;
-    margin-top: 1rem;
-  }
-  #exhilirated {
-    background-color: #c1eaf1;
-  }
-  #happy {
-    background-color: #a3e0eb;
-  }
-  #moderate {
-    background-color: #8fdae7;
-  }
-  #sad {
-    background-color: #76b3be;
-  }
-  #depressed {
-    background-color: #5c8b93;
-  }
-  .question {
-    font-size: 1.5rem;
-    margin: 1.5rem 0;
-  }
-  .answer-opt-1,
-  .answer-opt-2,
-  .answer-opt-3 {
-    border: 3px solid #f9b38d;
-    border-radius: 10px;
-    color: #000;
-    display: block;
-    font-size: 1.25rem;
-    margin: 1rem 0;
-    padding: 0.5rem;
-    width: 50%;
-  }
-  .answer-opt-1:hover,
-  .answer-opt-2:hover,
-  .answer-opt-3:hover {
-    background-color: #f9b38d;
-  }
-  .answer-selected {
-    background-color: #f9b38d;
-  }
-  .modal-btn {
-    background-color: #61afbd;
-    border: none;
-    border-radius: 10px;
-    color: #ffffff;
-    font-size: 1.25rem;
-    font-weight: 700;
-    margin-top: 2rem;
-    padding: 1rem;
-    text-transform: uppercase;
-  }
-  .modal-btn:hover {
-    background-color: #8fdae7;
-  }
-  /*****************************
-  OVERVIEW
-  *****************************/
-  #category {
-    background-color: #e7fbff;
-    font-size: 1.25rem;
-    font-weight: 700;
-  }
-  .answers,
-  .comment {
-    line-height: 2rem;
-  }
-
-  /*****************************
+/*****************************
   DISCOVER
-  *****************************/
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+*****************************/
+.discover-container {
+  padding: 24px;
+  margin: 0 auto;
+  max-width: 1200px;
+}
 
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
+.discover-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  width: 100%;
+}
+
+.discover-section:not(:first-child) h2 {
+  margin: 2.5rem 0 1.5rem;
+}
+
+.discover-section:last-child {
+  margin-bottom: 2rem;
+}
+
+.discover-cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+}
+
+
+.discover-card {
+  display: none;
+  border: none;
+  box-shadow: 1px 1px 2px #454e45;
+  padding: 1rem;
+
+  color: #161e18;
+  height: 180px;
+  width: 100%;
+}
+
+.discover-card:hover {
+  color: #161e18;
+  cursor: pointer;
+}
+
+.discover-heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  min-height: 40px;
+  margin-bottom: 0;
+}
+
+.discover-card hr {
+  border: none;
+  border-bottom: 1px solid #161e18;
+  margin: 0.5rem auto;
+}
+
+.discover-text {
+  font-size: 1.25rem;
+}
+
+.discover-dots {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  margin: 1.5rem auto;
+  width: 200px;
+}
+
+.discover-dots .dot {
+  background-color: #dddddd;
+  border-radius: 50%;
+  box-shadow: 1px 1px 2px #454e45;
+  height: 10px;
+  width: 10px;
+}
+
+.discover-dots .dot:hover {
+  cursor: pointer;
+}
+
+.watch .discover-card {
+  background-image: linear-gradient(to right bottom, #dcf7cb, #9eec69);
+}
+
+.listen .discover-card {
+  background-image: radial-gradient( circle 1294px at -15.5% 23.8%,  rgba(255,206,149,1) 0%, rgba(247,92,92,1) 44.9%, rgba(108,0,96,0.97) 93.8% );
+}
+
+.read .discover-card {
+  background-image: linear-gradient(to right bottom, rgba(220,182,232,1) 0%, rgba(163,175,243,1) 100%);
+}
+
+.show {
+  display: block;
+}
+
+@media only screen and (min-width: 600px) {
+  .discover-card {
+    height: 150px;
+    width: 70%;
   }
+}
+
+@media only screen and (min-width: 850px) {
+  .discover-cards {
+    justify-content: space-between;
+  }
+
+  .discover-card {
+    display: block;
+    height: 180px;
+    width: 150px;
+  }
+
+  .discover-heading {
+    font-size: 1rem;
+    height: 30px;
+  }
+
+  .discover-text {
+    font-size: 0.9rem;
+  }
+
+  .discover-dots {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .discover-card {
+    height: 250px;
+    width: 180px;
+  }
+
+  .discover-heading {
+    font-size: 1.25rem;
+    height: 40px;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .discover-card {
+    height: 200px;
+    width: 200px;
+  }
+}
