--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,7 @@ exhilirated happy moderate sad depressed
   color: #161e18;
   padding: 0 24px;
 }
+
 .site-content {
   flex: 1;
   display: flex;
@@ -402,6 +403,38 @@ nav {
 /*****************************
   OVERVIEW
 *****************************/
+.overview-containter {
+  padding: 24px;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.date-controller {
+  align-self: flex-start;
+
+  height: 2.5rem;
+  line-height: 2.5rem;
+
+  display: flex;
+  align-items: center;
+}
+
+#prev-month, #next-month {
+  font-size: 2rem;
+}
+
+.display-date {
+  color: #61afbd;
+  font-size: 2rem;
+  margin: 0 1.5rem;
+  text-align: center;
+  width: 210px;
+}
+
+#tracker-table {
+  margin: 24px auto;
+}
+
 #category {
   background-color: #f1f1f1;
   font-size: 1.25rem;
@@ -414,10 +447,8 @@ nav {
 }
 
 .graph-container {
-  margin: 4rem auto;
-}
-
-.graph-year {
+  margin-bottom: 4rem;
+  width: calc(100% - 6rem);
 }
 
 .graph {
@@ -425,13 +456,12 @@ nav {
   grid-template-columns: repeat(26, 1fr);
   grid-template-rows: repeat(14, 1fr);
   grid-gap: 2px;
+  width: 100%;
 }
 
 .graph-day {
   background-color: #dddddd;
   list-style: none;
-  height: 10px;
-  width: 10px;
 }
 
 @media only screen and (min-width: 900px) {
@@ -445,13 +475,9 @@ nav {
   MAIN SECTION
 *****************************/
 .ui.table {
-  margin: 0;
-  width: 75vw;
 }
 .table-div {
-  padding: 3rem;
   margin: auto;
-  width: 80vw;
 }
 td {
   width: 25vw;
@@ -488,54 +514,6 @@ a.item {
   color: #61afbd;
   font-size: 0.8rem;
   margin: 1rem auto 1.5rem;
-}
-
-/*****************************
-  DISCOVER
-*****************************/
-.ui.card {
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: none;
-  border-radius: 20px;
-  box-shadow: 1px 1px 2px #454e45;
-  height: 150px;
-  width: 100%;
-}
-.ui.card.listen {
-  background-image: url('../pattern/pattern1-yellow.jpg');
-}
-.ui.card.watch {
-  background-image: url('../pattern/pattern1-green.jpg');
-}
-.ui.card.read {
-  background-image: url('../pattern/pattern1-blue.jpg');
-}
-.discover-section {
-  font-size: 1.5rem;
-  margin: 2rem 0;
-  padding: 1rem 1rem;
-  text-transform: uppercase;
-}
-.card-heading {
-  text-transform: uppercase;
-}
-.card-body {
-  margin-top: 15px;
-}
-#buttons {
-  margin: 50px 0;
-  text-align: center;
-}
-button {
-  width: 200px;
-  height: 100px;
-}
-.swiper-button-prev {
-  color: #454e45;
-}
-.swiper-button-next {
-  color: #454e45;
 }
 
 /*****************************
