--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,20 +7,19 @@
         <a class="item" href="https://github.com/Caitlin3410">Caitlin Phillips</a><span class="divider-line"> | </span>
         <a class="item" href="https://github.com/LoraleeSmith">Loralee Smith</a>
     </div>
-    <div class="ui center aligned container copyright">® <span id="year"></span></div>
+    <div class="ui center aligned container copyright">© <span class="year"></span></div>
 </div>
 
 <!-- JAVASCRIPT, JQUERY -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<!-- <script src="https://unpkg.com/swiper/swiper-bundle.js"></script> -->
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script type="text/javascript" src="/assets/javascript/app.js"></script>
+<script type="text/javascript" src="/assets/javascript/discover.js"></script>
 <script type="text/javascript" src="/assets/javascript/modalLogic.js"></script>
 <script type="text/javascript" src="/assets/javascript/overview.js"></script>
-<script>
-    $('#year').html(new Date().getFullYear());
-</script>
 
 </body>
 </html>
