--- a/views/newentry.ejs
+++ b/views/newentry.ejs
@@ -72,7 +72,7 @@
     <hr />
     <!-- QUESTION ANSWERS -->
     <div id="question-answers">
-        <div class="eight wide column">
+        <div class="eight wide column questionA-container">
           <div id="questionA" class="question">
             Do you feel hopeless?
           </div>
@@ -101,7 +101,7 @@
             No.
           </button>
         </div>
-        <div class="eight wide column">
+        <div class="eight wide column questionB-container">
           <div id="questionB" class="question">
             Are you getting less sleep than usual?
           </div>
@@ -130,7 +130,7 @@
             No, I haven't noticed any differences.
           </button>
         </div>
-        <div class="eight wide column">
+        <div class="eight wide column questionC-container">
           <div id="questionC" class="question">
             Have you been productive today?
           </div>
