--- a/public/assets/css/discover.css
+++ b/public/assets/css/discover.css
@@ -35,6 +35,7 @@
 .discover-card {
   display: none;
   border: none;
+  border-radius: .28571429rem;
   box-shadow: 1px 1px 2px #454e45;
   padding: 1rem;
 
