--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -2,7 +2,7 @@
 
 <%- include('partials/navbar') -%>
 
-<main class="site-content overview-containter">
+<main class="overview-containter">
   <div class="date-controller">
     <div id="prev-month">
       <i class="angle left icon"></i>
@@ -16,7 +16,7 @@
       <table id="tracker-table">
         <thead id="category">
           <tr>
-            <td class="tracker-table-date">Date</td>
+            <td class="tracker-table-header-date">Date</td>
             <td>Comments</td>
           </tr>
         </thead>
