--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,9 @@
     <a class="nav-item" href="/home">
       Home
     </a>
+    <a class="nav-item" href="/newentry">
+      New Entry
+    </a>
     <a class="nav-item" href="/overview">
       Overview
     </a>
@@ -31,6 +34,9 @@
   <div class="menu-dropdown-items">
     <a class="nav-item" href="/home">
       Home
+    </a>
+    <a class="nav-item" href="/newentry">
+      New Entry
     </a>
     <a class="nav-item" href="/overview">
       Overview
