Fix: overview page does not crash

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 <div class="ui footer">
     <div class="ui center aligned container">
         <span class="divider-line">Made with  ☕️ and  💕 by </span><br>
-        <a class="item" href="https://github.com/nadinejuraschek">Nadine Juraschek</a><span class="divider-line"> | </span>
+        <a class="item" href="https://github.com/nadinejuraschek">Nadine Pesso</a><span class="divider-line"> | </span>
         <a class="item" href="https://github.com/Morganatic">Morgan McMilin</a><span class="divider-line"> | </span>
         <a class="item" href="https://github.com/Caitlin3410">Caitlin Phillips</a><span class="divider-line"> | </span>
         <a class="item" href="https://github.com/LoraleeSmith">Loralee Smith</a>
