--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,6 +25,10 @@ exhilirated happy moderate sad depressed
   min-height: calc(100vh - 152px);
 }
 
+button {
+  cursor: pointer;
+}
+
 /*******************************
   NAVIGATION
 *******************************/
@@ -313,6 +317,7 @@ nav {
   border: none;
   border-radius: 50%;
   box-shadow: 1px 1px 2px #a9abaa;
+  cursor: pointer;
   height: 4.5rem;
   width: 4.5rem;
 }
@@ -350,6 +355,7 @@ nav {
   border: 3px solid #f9b38d;
   border-radius: 10px;
   color: #000;
+  cursor: pointer;
   display: block;
   font-size: 1.25rem;
   height: 2.5rem;
